# PanoSQL

./: CLAUDE.md  findings.md  oh-package.json5  progress.md  task_plan.md  test_database.db
docs/: 01_项目开发计划.md  02_需求规格文档.md  03_概要设计文档.md  04_详细设计文档.md  05_UI设计方案.md
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_sqlite_manager.cpp  sqlite_manager.cpp  sqlite_manager.h
entry/src/main/ets/components/: ColumnEditor.ets  ExportDialog.ets  ResultPanel.ets  SchemaTree.ets  SqlEditor.ets  StatusBar.ets  TableDesigner.ets  TableView.ets  WebSqlEditor.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: ColumnInfo.ets  DatabaseInfo.ets  IndexInfo.ets  QueryResult.ets  TableEditState.ets  TableInfo.ets  TableSchema.ets
entry/src/main/ets/pages/: Index.ets  TableBrowserPage.ets
entry/src/main/ets/services/: DatabaseService.ets  FileTransferService.ets  PreferencesService.ets  QueryService.ets  SchemaService.ets
entry/src/main/ets/test/: FileAccessVerify.ets
entry/src/main/ets/utils/: Constants.ets
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/rawfile/: sql_editor.html
feedback/: 0327.md  032701,md  032702.md  032703.md  032704.md  032705.md  032706.md  032707.md  032708.md  032709.md  032710.md  0328.md  032801.md  032802.md  032803.md  032804.md  032805.md  032806.md  032807.md  0330.md  033101.md  033102.md  033103.md  033104.md  033105.md
